#86-14. aws 경로 수정중